tests/baselines/reference/deprecatedCompilerOptions3.errors.txt
/foo/tsconfig.json(3,19): error TS5097: Flag 'ES3' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(4,9): error TS5097: Flag 'noImplicitUseStrict' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(5,9): error TS5097: Flag 'keyofStringsOnly' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(6,9): error TS5097: Flag 'suppressExcessPropertyErrors' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(7,9): error TS5097: Flag 'suppressImplicitAnyIndexErrors' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(8,9): error TS5097: Flag 'noStrictGenericChecks' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(9,9): error TS5097: Flag 'charset' is deprecated, please remove it from your configuration.
/foo/tsconfig.json(10,9): error TS5097: Flag 'out' is deprecated, please remove it from your configuration.


==== /foo/tsconfig.json (8 errors) ====
    {
        "compilerOptions": {
            "target": "ES3",
                      ~~~~~
!!! error TS5097: Flag 'ES3' is deprecated, please remove it from your configuration.
            "noImplicitUseStrict": true,
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS5097: Flag 'noImplicitUseStrict' is deprecated, please remove it from your configuration.
            "keyofStringsOnly": true,
            ~~~~~~~~~~~~~~~~~~
!!! error TS5097: Flag 'keyofStringsOnly' is deprecated, please remove it from your configuration.
            "suppressExcessPropertyErrors": true,
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5097: Flag 'suppressExcessPropertyErrors' is deprecated, please remove it from your configuration.
            "suppressImplicitAnyIndexErrors": true,
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5097: Flag 'suppressImplicitAnyIndexErrors' is deprecated, please remove it from your configuration.
            "noStrictGenericChecks": true,
            ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS5097: Flag 'noStrictGenericChecks' is deprecated, please remove it from your configuration.
            "charset": "utf8",
            ~~~~~~~~~
!!! error TS5097: Flag 'charset' is deprecated, please remove it from your configuration.
            "out": "dist.js",
            ~~~~~
!!! error TS5097: Flag 'out' is deprecated, please remove it from your configuration.
        }
    }
    
==== /foo/a.ts (0 errors) ====
    const a = 1;
    